--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@ or in the "license" file accompanying this file. This file is distributed on an 
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="main.js"></script>
+        <script src="script.js"></script>
         <script>
         </script>
     </body>
